tests/parser/validinput/namespaces.idp
namespace test{
	procedure a(){
		return b()
	}
}

procedure main(){
	return test::a()
}

namespace test{
	procedure b(){
		return 1
	}
}