tests/parser/invalidinput/blablabla.idp
procedure main(){
	return 1
}


using <mx>

blablablabla bla 
